# mcpe

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD  CMakeLists.txt  Cargo.toml  MODULE.bazel  README.md  default.nix  flake.nix
.cargo/: config.toml
handheld/project/lib_projects/InAppSettingsKit/Controllers/: IASKAppSettingsViewController.h
handheld/src/: App.h  AppPlatform.h  AppPlatform_android.h  AppPlatform_android23.h  AppPlatform_iOS.h  AppPlatform_iOS.mm  EglConfigPrinter.h  MinecraftApp.cpp  main.cpp  main_android.cpp  main_android.h  main_android_java.cpp  main_dedicated.cpp  main_sdl3.cpp  main_sdl3.h  main_win32.h
handheld/src/client/: Minecraft.cpp  Minecraft.h  OptionStrings.cpp  OptionStrings.h  Options.cpp  Options.h  OptionsFile.cpp
handheld/src/client/gamemode/: CreativeMode.cpp  CreatorMode.cpp  CreatorMode.h  GameMode.cpp  GameMode.h  SurvivalMode.cpp
handheld/src/client/gui/: Font.cpp  Font.h  Gui.cpp  Gui.h  GuiComponent.cpp  GuiComponent.h  Screen.cpp
handheld/src/client/gui/components/: Button.cpp  GButton.h  GuiElement.cpp  GuiElement.h  GuiElementContainer.cpp  GuiElementContainer.h  ImageButton.cpp  InventoryPane.cpp  InventoryPane.h  ItemPane.cpp  ItemPane.h  LargeImageButton.cpp  NinePatch.cpp  NinePatch.h  OptionsGroup.cpp  OptionsGroup.h  OptionsItem.cpp  (+14 more)
handheld/src/client/model/: ChickenModel.cpp  ChickenModel.h  CreeperModel.h  HumanoidModel.cpp  HumanoidModel.h  Model.h  QuadrupedModel.cpp  QuadrupedModel.h  SheepFurModel.cpp  SheepFurModel.h  SheepModel.cpp  SheepModel.h  SkeletonModel.h  SpiderModel.h  ZombieModel.h
handheld/src/client/multiplayer/: MultiPlayerLevel.h
handheld/src/client/particle/: BreakingItemParticle.h  BubbleParticle.h  CritParticle2.h  ExplodeParticle.h  FlameParticle.h  HugeExplosionParticle.h  HugeExplosionSeedParticle.h  LavaParticle.h  Particle.cpp  Particle.h  ParticleEngine.cpp  RedDustParticle.h  SmokeParticle.h  SplashParticle.h  TakeAnimationParticle.h  TerrainParticle.h
handheld/src/client/player/: LocalPlayer.cpp  LocalPlayer.h  RemotePlayer.cpp
handheld/src/client/renderer/: Chunk.cpp  Chunk.h  GameRenderer.cpp  ItemInHandRenderer.cpp  LevelRenderer.cpp  LevelRenderer.h  RenderChunk.cpp  RenderChunk.h  RenderList.cpp  RenderList.h  Tesselator.cpp  Tesselator.h  Textures.cpp  Textures.h  TileRenderer.cpp  TileRenderer.h  gles.cpp  gles.h
handheld/src/client/sound/: SoundEngine.cpp  SoundEngine.h  SoundEngine.mm
handheld/src/locale/: I18n.cpp  I18n.h
handheld/src/nbt/: CompoundTag.h  ListTag.h  Tag.h
handheld/src/network/: ClientSideNetworkHandler.cpp  ClientSideNetworkHandler.h  NATPunchHandler.cpp  NetEventCallback.cpp  NetEventCallback.h  PHPDirectoryServer2.cpp  PHPDirectoryServer2.h  Packet.h  RakNetInstance.cpp  RakNetInstance.h  ServerSideNetworkHandler.cpp  ServerSideNetworkHandler.h
handheld/src/network/command/: CommandServer.cpp  CommandServer.h
handheld/src/network/packet/: ChunkDataPacket.h  ContainerOpenPacket.h  ContainerSetContentPacket.h  ContainerSetSlotPacket.h  MovePlayerPacket.h  PlaceBlockPacket.h  SendInventoryPacket.h  StartGamePacket.h  TeleportEntityPacket.h  UseItemPacket.h
handheld/src/platform/: file.h  time.cpp
handheld/src/platform/audio/: SoundSystem.h  SoundSystemAL.cpp  SoundSystemAL.h  SoundSystemSL.cpp  SoundSystemSL.h
handheld/src/platform/input/: Controller.cpp  Controller.h  Mouse.cpp  Mouse.h  Multitouch.h
handheld/src/platform/sdl3/: Sdl3GraphicsDriver.h  Sdl3VulkanBackend.cpp  Sdl3VulkanBackend.h
handheld/src/platform/wayland/: WaylandSignCompositor.cpp  WaylandSignCompositor.h  WaylandSignTexture.cpp  WaylandSignTexture.h
handheld/src/raknet/: AutopatcherRepositoryInterface.h  BitStream.cpp  CCRakNetSlidingWindow.cpp  CloudClient.cpp  CloudClient.h  CloudCommon.cpp  CloudCommon.h  CloudServer.h  CommandParserInterface.h  ConsoleServer.h  DS_ByteQueue.cpp  DS_ByteQueue.h  DS_Hash.h  DS_Heap.h  DS_HuffmanEncodingTree.cpp  DS_LinkedList.h  DS_List.h  DS_Map.h  DS_MemoryPool.h  DS_Multilist.h  DS_OrderedChannelHeap.h  DS_OrderedList.h  DS_RangeList.h  DS_Table.cpp  DataCompressor.cpp  DynDNS.h  EmailSender.cpp  EmailSender.h  FileListTransfer.cpp  FileOperations.cpp  FileOperations.h  FullyConnectedMesh2.cpp  GetTime.cpp  GridSectorizer.h  HTTPConnection.h  IncrementalReadInterface.cpp  LinuxStrings.cpp  LocklessTypes.h  LogCommandParser.cpp  LogCommandParser.h  (+50 more)
handheld/src/server/: CreatorLevel.cpp  CreatorLevel.h  ServerLevel.cpp  ServerLevel.h  ServerPlayer.cpp  ServerPlayer.h
handheld/src/util/: DataIO.h  IntHashMap.h  Mth.cpp  PerfRenderer.cpp  PerfTimer.cpp  PerfTimer.h  Random.h  StringUtils.cpp  StringUtils.h  WeighedRandom.h
handheld/src/world/: Direction.cpp
handheld/src/world/entity/: AgableMob.cpp  Entity.cpp  Entity.h  FlyingMob.cpp  HangingEntity.cpp  Mob.cpp  Mob.h  MobCategory.cpp  MobFactory.h  Motive.cpp  Painting.cpp  Painting.h  PathfinderMob.cpp  SynchedEntityData.cpp  SynchedEntityData.h
handheld/src/world/inventory/: BaseContainerMenu.h  FillingContainer.cpp  FillingContainer.h
handheld/src/world/item/: ArmorItem.cpp  ArmorItem.h  BedItem.cpp  BedItem.h  BowItem.h  BowlFoodItem.h  ClothTileItem.h  DiggerItem.h  DoorItem.h  DyePowderItem.cpp  DyePowderItem.h  EggItem.h  FoodItem.h  HangingEntityItem.cpp  HangingEntityItem.h  HoeItem.cpp  HoeItem.h  Item.cpp  Item.h  ItemInstance.cpp  ItemInstance.h  PickaxeItem.cpp  SeedItem.h  ShearsItem.h  SignItem.h  SnowballItem.h  StoneSlabTileItem.h  TileItem.h  TilePlanterItem.h  WeaponItem.h
handheld/src/world/level/: ChunkPos.h  Explosion.cpp  Level.cpp  Level.h  LevelConstants.h  LevelListener.h  LightLayer.h  LightUpdate.cpp  LightUpdate.h  MobSpawner.cpp  MobSpawner.h
handheld/src/world/phys/: AABB.h  Vec3.h
src/: input.rs  main.rs  platform.rs  timer.rs
src/render/: camera.rs  context.rs  gui.wgsl  mod.rs  selection.rs  selection.wgsl  terrain.rs  terrain.wgsl  ui.rs
src/world/: block.rs  chunk.rs  level.rs  mod.rs  nbt.rs  picking.rs  storage.rs
src/world/levelgen/: biome.rs  feature.rs  mod.rs  noise.rs  overworld.rs  random.rs
(+278 files in other folders)
